[package]
name = "l3bin"
version = "1.0.0"
edition = "2021"
authors = ["Philippe Massicotte <pmassicotte@hotmail.com>"]
description = "Integerized Sinusoidal Binning Scheme for Level 3 Data"
license = "MIT"
repository = "https://github.com/PMassicotte/l3bin"
readme = "README.md"
documentation = "https://docs.rs/l3bin"
keywords = ["ISIN", "L3", "binning", "ocean", "satellite"]
categories = ["science", "science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
default = []
