[package]
name = "l3bin"
version = "1.0.0"
authors = ["Philippe Massicotte <pmassicotte@hotmail.com>"]
edition = "2021"
description = "Integerized Sinusoidal Binning Scheme for Level 3 Data"
documentation = "https://docs.rs/l3bin"
readme = "README.md"
repository = "https://github.com/PMassicotte/l3bin"
license = "MIT"
keywords = ["ISIN", "L3", "binning", "ocean", "satellite"]
categories = ["science", "science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
